--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,7 +15,10 @@ jobs:
         with:
           dotnet-version: 6.0.x
           include-prerelease: true
+          shell: pwsh
 
-      - run: cd src/FsCore && ./pack.ps1
+      - shell: pwsh
+        run: cd src/FsCore; ./pack.ps1
+
       - run: dotnet nuget add source https://nuget.pkg.github.com/${{ github.actor }}/index.json --name github
       - run: dotnet nuget push src/FsCore/bin/Release/*.symbols.nupkg --source github --api-key ${{ secrets.GITHUB_TOKEN }} --skip-duplicate
