--- a/src/FsCore/FsCore.fsproj
+++ b/src/FsCore/FsCore.fsproj
@@ -1,10 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFrameworks>net5.0;net6.0</TargetFrameworks>
         <LangVersion>preview</LangVersion>
         <PackageId>FsCore</PackageId>
-        <Version>0.0.1-alpha.11</Version>
+        <Version>0.0.1-alpha.12</Version>
         <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
     </PropertyGroup>
     <ItemGroup>
